--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 sei que há muito a aprender e é isso que eu quero, crescer profissionalmente e ter dóminio sobre a área.
             </p>
         </section>
-        <img src="./assets/Imagem.png" alt = "foto improvisada do Max">
+        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt = "foto improvisada do Max">
     </main>
     <footer class="rodape">
         <p> Desenvolvido por Maxwell Rodrigues.</p>
