--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
                 <h1 class="apresentacao__conteudo__titulo">Desenvolvedor em <strong class="titulo-destaque"> DESENVOLVIMENTO! </strong></h1>
                 <p class="apresentacao__conteudo__texto">Olá! Sou Maxwell Rodrigues, estudante de Análise e Desenvolvimento de sistemas com foco em back-end. Disposto a aprender e evoluir em todas as areas da tecnologia. Vamos conversar?</p>
                 <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://www.instagram.com/maxrodriguesss_/">
+                    <h1 class="apresentacao__links__subtitulo">Minhas redes sociais:</h1>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/maxrodriguesss_/">
                     <img src="./assets/instagram.png" alt="instagram logo" class="imagem__links">
                     Instagram
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/maxrodriguesss">
+                <a class="apresentacao__links__navegacao" href="https://github.com/maxrodriguesss">
                     <img src="./assets/github-logo.png" alt="github logo" class="imagem__links">
                     GitHub
                 </a>
                 </div>
                 </section>
-                <img src="./assets/Imagem.png" alt = "foto improvisada do Max"> 
+                <img class="apresentacao__imagem" src="./assets/Imagem.png" alt = "foto improvisada do Max"> 
     </main>
     <footer class="rodape">
         <p> Desenvolvido por Maxwell Rodrigues.</p>
